--- a/1-intro.html
+++ b/1-intro.html
@@ -11,7 +11,7 @@
 		<li>Implementation & test case</li>
 	</ul>
 	<aside class="notes">
-		Je me propose maintenant de définir et de présenter le concept de gridshell élastique et de souligner les aspects théoriques et techniques qui sont en jeu.
+		Je me propose maintenant de présenter le concept de gridshell élastique et de souligner les aspects théoriques et techniques qui sont en jeu.
 	</aside>
 </section>
 
@@ -26,9 +26,9 @@
 	<aside class="notes">
 	Premier projet, la cathédral éphémère de Créteil, réalisée en 2013 pour T/E/S/S.
 	<hr>
-	On voit ici la préfabrication de la structure faite en tubes pultrudés à base de fibre de verre
+	On voit ici la préfabrication de la structure faite en tubes pultrudés à base de fibre de verre ...
 	<hr>
-	Ainsi que l'assemblage de la grille au sol sur une surface d'environ 700m2
+	Ainsi que l'assemblage de la grille au sol sur une surface d'environ 700m2.
 	<hr>
 	On devinne la grande légerté et la grande souplesse de cet objet qui pèse moins de 3 kilogrames au m2.
 	<hr>
@@ -36,7 +36,7 @@
 	<hr>
 	La grille est ensuite ancrée au sol et l'on obtient l'état de forme définitif.
 	<hr>
-	Elle est finalement triangulée puis couverte d'une toile pour assurer le clos couvert du bâtiment
+	Elle est finalement triangulée puis couverte d'une toile pour assurer le clos couvert du bâtiment.
 	</aside>
 </section>
 <section class="black center" data-background-video="./img/mov/booby.mp4" data-background-size="contain" data-background-video-muted >
@@ -57,18 +57,23 @@
 <section class="center" data-background-image="./img/montpellier_1.jpg" data-background-size="cover" data-state="autohide">
 	<h7 class="">Montpellier 2016</h7>
 	<aside class="notes">
-		Troisième projet, le gridshell de Montpellier est le second d'une série de 2 gridshells en bois réalisés en juin 2016 et d'environ 50m2 chacun.
+		Troisième projet, le gridshell de Montpellier est le second d'une série de 2 gridshells en bois réalisés en juin 2016, et d'environ 50m2 chacun.
 		<hr>
 		Le bois est utilisé pour des raisons architecturales mais la perte de performance mécanique est significative comparé au matériau composite, et le système constructif s'en trouve sensiblement modifié.
 		<!-- <hr>
 		La structure est réalisée sur le principe du gridshell double nape, plus complexe à mettre en oeuvre, bien que la portée soit réduite à seulement quelques mètres. -->
-		<hr>
-		Les sections employées sont rectangulaires ce qui a pour conséquence de développer des contraintes de torsion non négigeables dans les poutres. Celà rend le calcul de recherche de forme plus complexe et demande des modèles qui ne sont pas purement flexionnels, ce qui est l'objet principal de cette thèse.		
-		<hr>
-		Enfin, on voit qu'on a proposé un nouveau système de contreventement par cable. Ce système a été mis en place directement sur la grille au sol puis embarqué au cours de la mise en forme. Il permet de simplifier l'étape de contreventement, couteuse en temps et délicate du fait du travail en hauteur.</h>
 	</aside>
 </section>
-
+<section class="center" data-background-image="./img/montpellier_2.jpg" data-background-size="cover" data-state="autohide">
+	<h7 class="" style="display:none">Montpellier 2016</h7>
+	<aside class="notes">
+		Les sections employées sont rectangulaires ce qui a pour conséquence de développer des contraintes de torsion non négligeables dans les poutres. Cela rend le calcul de recherche de forme plus complexe et demande des modèles qui ne sont pas purement flexionnels, ce qui est l'objet principal de cette thèse.		
+		<hr>
+		Enfin, on voit qu'on a proposé un nouveau système de contreventement par cable. Ce système a été mis en place directement sur la grille au sol puis embarqué au cours de la mise en forme. 
+		<hr>
+		Il permet de simplifier l'étape de contreventement, couteuse en temps et délicate du fait du travail en hauteur.
+	</aside>
+</section>
 <!-- 
 =============================================================================================== 
 	CONCEPT
@@ -99,9 +104,9 @@
 	Les coques peuvent franchir de grandes portées avec un minimum de matière car elles transmettent les efforts de manière membranaire.
 	<hr>
 	Ici l'élancement de la structure est proche du centième, ce qui est considérable.
-	<!-- Pour de ouvrages classiques du génie civil, on porte plutôt à L/20 ou L/30. L/40 pour les paserelles piétonnes les plus élancées. -->
+	<!-- Pour de ouvrages classiques du génie civil, on porte plutôt à L/20 ou L/30. L/40 pour les paserelles piétonnes les plus élancées.
 	<hr>
-	On lit très bien cette légerté sur la photo.
+	On lit très bien cette légerté sur la photo. -->
 	</aside>
 </section>
 <section class="center" data-background-image="./img/creteil_2.jpg" data-background-size="cover" data-state="autohide">
@@ -155,17 +160,17 @@
 </section>
 <section class="center" data-background-image="./img/creteil_3b.jpg" data-background-size="cover" data-state="autohide">
 	<aside class="notes">
-	Plus le calcul de forme est maîtrisé et plus il est possible d'aller loin dans l'étude de la mise en forme. Par un plan de levage bien choisi on peut d'emblé donner à la grille une forme la plus proche possible de la forme finale.
+	Plus le calcul de forme est maîtrisé et plus il est possible d'aller loin dans l'étude de la mise en forme. Par un plan de levage bien choisi, on peut d'emblé donner à la grille, une forme la plus proche possible de la forme finale.
 	<hr>
 	On comprend aussi la nécessité de pouvoir simuler les étapes transitoires. Soulever une grille de cette taille ne s'improvise pas et les risques de casse sont élevés.
 	<hr>
-	On voit également que le niveau de déformation de la structure est très important, et que donc les calculs seront à traiter en non linéaire, ce qui est là encore un point essentiel de cette thèse.
+	On constate que le niveau de déformation de la structure est très important, et que donc les calculs seront à traiter en non linéaire, ce qui là encore est un point essentiel de cette thèse.
 	</aside>
 </section>
 <section class="center" data-background-image="./img/creteil_4.jpg" data-background-size="cover" data-state="autohide">
 	<h7 class="">Anchoring</h7>
 	<aside class="notes">
-	Une fois la grille positionnée au dessus de ses appuis les tubes sont fixés un à un aux ancrages préalablement scellés dans la dalle.
+	Une fois la grille positionnée au dessus de ses appuis, les tubes sont fixés un à un aux ancrages scellés dans la dalle.
 	<hr>
 	L'hyperstaticité de la structure rend cette étape compliquée et difficile à prévoir. Celà nécessiterait un grand nombre de calculs pour définir en amont la séquence de montage et l'ordre optimal dans lequel fixer les tubes.
 	</aside>
@@ -188,8 +193,10 @@
 	<hr>
 	On a profité jusqu'ici du degré de liberté en cisaillement de la grille pour la déformer spatialement.
 	<br>
-	En bloquant ce degré de liberté on active le comportement membranaire de la structure et elle se comporte alors comme une coque. Le différentiel de raideur est de l'ordre de 15.
-	<!-- Et on a obtenu une structure courbe qui fonctionne plutôt comme un réseau d'arches précontraintes en flexion.
+	En bloquant ce degré de liberté on active le comportement membranaire de la structure et elle se comporte alors comme une coque.
+	<!-- 
+	Le différentiel de raideur est de l'ordre de 15.
+	Et on a obtenu une structure courbe qui fonctionne plutôt comme un réseau d'arches précontraintes en flexion.
 	<hr> -->
 	<!-- En bloquant ce degré de liberté on active le comportement membranaire de la structure et elle se comporte alors comme une coque. Le différentiel de raideur calculé est de l'ordre de 15. -->
 	<hr>
@@ -205,7 +212,7 @@
 	<aside class="notes">
 	Pour finir la structure est couverte, ici par une toile en PVC précontraint.
 	<hr>
-	La toile est façonnée sur mesure à partir de la géométrie calculé. Il n'y a pas de prise d'information sur la structure réèlle.
+	La toile est façonnée sur mesure à partir de la géométrie calculé. Il n'y a pas de prise d'information sur la structure réelle.
 	<hr>
 	En principe, c'est l'étape de vérité. Si la toile fait des plis, c'est que la forme obtenue ne correspond pas précisément à la forme calculée. On ne peut pas tricher.
 	<!-- <hr> 
@@ -238,7 +245,9 @@
 	<hr>
 	Premièrement on titre partie de la souplesse du matériau pour générer de la forme, c'est à dire de la courbure, afin de développer de la raideur géométrique.
 	<hr>
-	Deuxièmement on accède à une manière efficace sur le plan constructif de créer une enveloppe courbe à partir d'une résille complètement standardisée et initialement plane. <br>On s'épargne ainsi la fabrication d'objets courbes, de moules, de coffrages, de dispositifs d'étaiement, qui sont en général complexes et couteux à réaliser et utilisés seulement de manière temporaire.
+	Deuxièmement on accède à une manière efficace sur le plan constructif de créer une enveloppe courbe, à partir d'une résille complètement standardisée et initialement plane.
+	<hr>
+	On s'épargne ainsi la fabrication d'objets courbes, de moules, de coffrages, de dispositifs d'étaiement, qui sont en général complexes et couteux à réaliser et utilisés seulement de manière temporaire.
 	</aside>
 </section>
 <section class="center" data-background-image="./img/pekin.jpg" data-background-size="cover">
@@ -257,9 +266,9 @@
 	<br><br>
 	<strong>Detailing & Envelope</strong>
 	<aside class="notes">
-	On a vu cependant que cette efficacité n'est possible qu'au prix d'une vraie complexité.
+	On a vu cependant que cette efficacité n'est possible qu'au prix d'une vraie complexité ...
 	<hr>
-	Cette complexité se manifeste principalement dans l'interaction forme-résille-structure qui demande de maitriser des calculs non linéaires complexes, pour pouvoir prédire la forme d'équilibre de la structure.
+	Celle-ci se manifeste principalement dans l'interaction forme-résille-structure qui demande de maitriser des calculs non linéaires complexes, pour pouvoir prédire la forme d'équilibre de l'ouvrage.
 	<hr>
 	Et que par ailleurs se posent un certain nombre de questions technologiques délicates liées aux détails du système constructif (connexions, ancrages, manchons) et à la matérialité de l'enveloppe.
 	</aside>
@@ -279,7 +288,9 @@
 <section class="center" data-background-image="./img/mannheim_1.jpg" data-background-size="cover" data-state="autohide" data-autoslide="">
 	<h7 class="">Mannheim 1975</h7>
 	<aside class="notes">
-	Enfin, je ne pourrais pas terminer de bonne fois cette partie introductive sans mentionner Frei Otto, qui a inventé et étudié ces structures dans les années 60, et à qui on doit la multihalle de Mannheim, un gridshell double nape en bois d'environ 8000m2 construit en 1975.
+	Enfin, je ne pourrais pas terminer de bonne fois cette partie introductive sans mentionner Frei Otto, qui a inventé et étudié ces structures dans les années 60, et à qui on doit la multihalle de Mannheim : 
+	<hr>
+	un gridshell double nape en bois d'environ 8000m2 construit en 1975.
 	</aside>
 </section>
 
