--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<hr>
 					Je vais aujourd'hui vous présenter mon travail de recherche sur les structures de type gridshell élastique. En m'intéressant plus spécifiquement aux modèles de calcul dédiés à l'analyse de ces structures, qui sont fortement précontraintes du fait de leur mise en forme. On parlera de précontrainte de flexion.
 					<hr>
-					On verra que ces ouvrages sont complexes à concevoir pour un certain nombre de raisons, et que les outils d'analyse existants ne permettent pas de répondre de manière efficace aux besoins des architectes et des ingénieurs dans un contexte de projet.
+					On verra que ces ouvrages sont complexes à concevoir, et que les outils d'analyse existants ne permettent pas de répondre de manière efficace aux besoins des architectes et des ingénieurs dans un contexte de projet.
 			</section>
 
 			<section class="center"  data-background-transition="fade" data-transition="fade-in fade-out">
@@ -97,13 +97,13 @@
 				</table>
 				<p style="text-align:center"><cite>(<sup>*</sup>) Douthe 2007, Bouhaya 2010, Kotelnikova 2012, Tayeb 2015, du Peloux 2017</cite>	</p>				
 				<aside class="notes">
-					Avant de rentrer dans le vif du sujet, je voudrais rappeler ou souligner ce qui me semble être un aspect central de mon approche, qui est d'avoir souhaité rentrer dans cette problématique avec une double casquette. 
+					Avant de rentrer dans le vif du sujet, je voudrais souligner que j'ai cherché à rentrer dans cette problématique avec une double casquette : 
 					<hr>
 					La casquette de chercheur par mon activité au sein du laboratoire Navier, 
 					<br>
-					Et la casquette d'ingénieur structure par mon activité au sein du bureau d'étude T/E/S/S.
+					Et la casquette d'ingénieur par mon activité au sein du bureau d'étude T/E/S/S.
 					<hr>
-					Mon travail s'est beaucoup enrichi de ces aller-retours répétés entre théorie et pratique.
+					Je crois que cela a donné une coloration particulière à mon travail.
 				</aside>
 			</section>
 
@@ -138,7 +138,9 @@
 				<aside class="notes">
 				Ma présentation s'organise de la façon suivante
 				<hr>
-				Dans une première partie je vais présenter le concept de gridshell élastique à partir de projets que j'ai réalisés. Je donnerai ensuite quelques éléments sur la méthode de conception que j'ai mise en place pour le projet de la cathédrale éphémère de créteil en 2013.
+				Dans une première partie je vais présenter le concept de gridshell élastique à partir de projets que j'ai réalisés. 
+				<hr>
+				Je donnerai ensuite quelques éléments sur la méthode de conception que j'ai mise en place pour le projet de la cathédrale éphémère de créteil, en 2013.
 				</aside>
 			</section>
 			<section class="plan center" data-background-transition="none" data-transition="none">
@@ -156,7 +158,7 @@
 				<aside class="notes">
 				Dans une seconde partie je présenterai deux approches pour construire un modèle de poutre enrichi bien adapté au formfinding et à la prise en compte des couplages flexion-torsion dans les gridshells élastiques. 
 				<hr>
-				Je traiterai le passage du continu au discret et celà m'amènera à formuler un élément de poutre discret original dit biarc.
+				Je traiterai le passage du continu au discret et cela m'amènera à formuler un nouvel élément de poutre appelé biarc.
 				</aside>
 			</section>
 			<section class="plan center" data-background-transition="none" data-transition="none">
@@ -173,7 +175,10 @@
 				</ul>
 				<aside class="notes">
 				Pour finir, je parlerai de l'implémentation de cette élément dans un code de relaxation dynamique appelé Marsupilami. 
-				<hr>Je présenterai un comparatif avec ABAQUS sur un cas test.
+				<hr>
+				Je présenterai un comparatif avec le logiciel ABAQUS sur un cas test ...
+				<hr>
+				Avant de conclure.
 				</aside>
 			</section>
 
